--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 alabaster==0.7.12
+appdirs==1.4.4
 argon2-cffi==20.1.0
 astroid==2.4.2
 atomicwrites==1.4.0
@@ -6,10 +7,12 @@ attrs==19.3.0
 autopep8==1.5.4
 Babel==2.8.0
 backcall==0.2.0
+black==20.8b1
 bleach==3.1.5
 certifi==2020.6.20
 cffi==1.14.1
 chardet==3.0.4
+click==7.1.2
 cloudpickle==1.5.0
 cryptography==3.0
 cycler==0.10.0
@@ -43,14 +46,17 @@ MarkupSafe==1.1.1
 matplotlib==3.3.0
 mccabe==0.6.1
 mistune==0.8.4
+mypy-extensions==0.4.3
 nbconvert==5.6.1
 nbformat==5.0.7
 notebook==6.1.1
 numpy==1.19.1
 numpydoc==1.1.0
 packaging==20.4
+pandas==1.1.2
 pandocfilters==1.4.2
 parso==0.7.0
+pathspec==0.8.0
 pathtools==0.1.2
 pexpect==4.8.0
 pickleshare==0.7.5
@@ -81,8 +87,11 @@ QDarkStyle==2.8.1
 QtAwesome==0.7.2
 qtconsole==4.7.5
 QtPy==1.9.0
+regex==2020.7.14
 requests==2.24.0
 rope==0.17.0
+scipy==1.5.2
+seaborn==0.11.0
 SecretStorage==3.1.2
 Send2Trash==1.5.0
 six==1.15.0
@@ -102,6 +111,8 @@ testpath==0.4.4
 toml==0.10.1
 tornado==6.0.4
 traitlets==4.3.3
+typed-ast==1.4.1
+typing-extensions==3.7.4.3
 ujson==1.35
 urllib3==1.25.10
 watchdog==0.10.3
