--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ cffi==1.14.1
 chardet==3.0.4
 click==7.1.2
 cloudpickle==1.5.0
-cryptography==3.0
+cryptography==3.2.1
 cycler==0.10.0
 decorator==4.4.2
 defusedxml==0.6.0
@@ -34,6 +34,7 @@ isort==4.3.21
 jedi==0.17.1
 jeepney==0.4.3
 Jinja2==2.11.2
+joblib==0.17.0
 jsonschema==3.2.0
 jupyter==1.0.0
 jupyter-client==6.1.6
@@ -90,11 +91,13 @@ QtPy==1.9.0
 regex==2020.7.14
 requests==2.24.0
 rope==0.17.0
+scikit-learn==0.23.2
 scipy==1.5.2
 seaborn==0.11.0
 SecretStorage==3.1.2
 Send2Trash==1.5.0
 six==1.15.0
+sklearn==0.0
 snowballstemmer==2.0.0
 sortedcontainers==2.2.2
 Sphinx==3.1.2
@@ -108,6 +111,7 @@ spyder==4.1.4
 spyder-kernels==1.9.3
 terminado==0.8.3
 testpath==0.4.4
+threadpoolctl==2.1.0
 toml==0.10.1
 tornado==6.0.4
 traitlets==4.3.3
